force-app/main/default/objects/Integration_DeadLetter__c/Integration_DeadLetter__c.object-meta.xml
<CustomObject>
    <label>Integration Dead Letter</label>
    <pluralLabel>Integration Dead Letters</pluralLabel>
    <nameField>
        <displayFormat>DL-{0000000000}</displayFormat>
        <label>Dead Letter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>