force-app/main/default/objects/Integration_DeadLetter__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>HTTP Method</label>
    <type>Text</type>
    <length>10</length>
</CustomField>