force-app/main/default/objects/Integration_DeadLetter__c/fields/Last_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Code__c</fullName>
    <label>Last Status Code</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>