force-app/main/default/objects/Integration_DeadLetter__c/fields/Named_Credential_Path__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Path__c</fullName>
    <label>Named Credential Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>