force-app/main/default/objects/Integration_DeadLetter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>REPLAYED</fullName>
                <label>Replayed</label>
            </value>
            <value>
                <fullName>RESOLVED</fullName>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>